# sandbox-rust-graphql

./: .clinerules  .env  .gitignore  Cargo.toml  README.md  diesel.toml
docs/: activeContext.md  chat_message.md  overview.md  productContext.md  progress.md  systemPatterns.md  techContext.md
migrations/2025-03-08-000000_create_chat_messages/: up.sql
src/: main.rs
src/db/: migrations.rs  mod.rs  models.rs  schema.rs
src/schema/: mod.rs  mutation.rs  query.rs
